--- a/service-bundle/pom.xml
+++ b/service-bundle/pom.xml
@@ -19,6 +19,15 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.servicemix.bundles</groupId>
+			<artifactId>org.apache.servicemix.bundles.twitter4j</artifactId>
+			<version>4.0.3_1</version>
+			<scope>provided</scope>
+			<type>bundle</type>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
