--- a/felix/conf/config.properties
+++ b/felix/conf/config.properties
@@ -97,4 +97,5 @@ felix.log.level=1
 #
 
 org.osgi.service.http.port=8080
+org.apache.felix.http.jettyEnabled=true
 obr.repository.url=http://felix.apache.org/obr/releases.xml
