--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     </properties>
 
     <modules>
+        <module>twitter-model</module>
         <module>service-bundle</module>
     </modules>
 
