--- a/dao-bundle/pom.xml
+++ b/dao-bundle/pom.xml
@@ -6,9 +6,10 @@
         <artifactId>kcjug-felix</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>twitter-service-bundle</artifactId>
+    <artifactId>twitter-dao-bundle</artifactId>
     <packaging>bundle</packaging>
-    <name>Twitter Service Bundle</name>
+
+    <name>KCJUG Twitter Dao Bundle</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,27 +17,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.servicemix.bundles</groupId>
-            <artifactId>org.apache.servicemix.bundles.twitter4j</artifactId>
-            <version>4.0.3_1</version>
-            <scope>provided</scope>
-            <type>bundle</type>
-        </dependency>
-        <dependency>
             <groupId>com.github.bstopp.kcjug.felix</groupId>
-            <artifactId>twitter-model-bundle</artifactId>
-            <version>${project.version}</version>
-            <scope>provided</scope>
-            <type>bundle</type>
-        </dependency>
-        <dependency>
-            <groupId>com.github.bstopp.kcjug.felix</groupId>
-            <artifactId>twitter-dao-bundle</artifactId>
+            <artifactId>twitter-model</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
             <type>bundle</type>
         </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
@@ -48,10 +36,9 @@
                     <instructions>
                         <Export-Package>
                             !com.github.bstopp.kcjug.felix.twitter.*.impl.*,
-                            com.github.bstopp.kcjug.felix.twitter.job,
-                            com.github.bstopp.kcjug.felix.twitter.service
+                            com.github.bstopp.kcjug.felix.twitter.dao
                         </Export-Package>
-                        <Bundle-Activator>com.github.bstopp.kcjug.felix.service.Activator</Bundle-Activator>
+                        <Bundle-Activator>com.github.bstopp.kcjug.felix.dao.Activator</Bundle-Activator>
                     </instructions>
                 </configuration>
             </plugin>
@@ -106,4 +93,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
